--- a/index.html
+++ b/index.html
@@ -100,7 +100,199 @@
 		<br>
 		<span>&#8595;</span>
 		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
+		<span>&#8595;</span>
+		<br>
 		<iframe src="https://reillyeon.github.io/scraps/deviceorientation.html" title="Sensor info by reillyeon"></iframe>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
+		<br>
+		<span>&#8593;</span>
 		<br>
 		<span>&#8593;</span>
 		<br>
