--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
 		<span>&#8595;</span>
 		<br>
 		<iframe src="https://reillyeon.github.io/scraps/deviceorientation.html" title="Sensor info by reillyeon"></iframe>
+		<embed src="https://reillyeon.github.io/scraps/deviceorientation.html" width="100%" height="100%"  type="application/pdf"/>
 		<br>
 		<span>&#8593;</span>
 		<br>
