--- a/index.html
+++ b/index.html
@@ -196,8 +196,7 @@
 		<br>
 		<span>&#8595;</span>
 		<br>
-		<iframe src="https://reillyeon.github.io/scraps/deviceorientation.html" title="Sensor info by reillyeon"></iframe>
-		<embed src="https://reillyeon.github.io/scraps/deviceorientation.html" width="100%" height="100%"  type="application/pdf"/>
+		<iframe src="https://gsinafirooz.github.io/reillyeonscraps/deviceorientation.html" title="Sensor info by reillyeon"></iframe>
 		<br>
 		<span>&#8593;</span>
 		<br>
